Fix improper quotes, dashes etc.

--- a/main.tex
+++ b/main.tex
@@ -13,10 +13,10 @@
 
 \chapter*{Foreword}
 Adam Ragusea is one of the authors listed on the front of this book, but you'll
-notice the title is "The \emph{Unofficial} Adam Ragusea Cookbook". That's
+notice the title is ``The \emph{Unofficial} Adam Ragusea Cookbook''. That's
 because he wrote no part of it, is not affiliated with the effort, and most
 likely is not even aware of its existence. This book is merely an attempt at
-compiling his recipes and advice into a single publication - and a shoddy effort
+compiling his recipes and advice into a single publication --- and a shoddy effort
 at that. So while this book is dedicated to this author's favorite YouTube cook,
 know that it is in no way associated with the man himself.\\
 Some parts of the book may contain direct quotes of Adam Ragusea, while others
@@ -37,7 +37,7 @@ license, found in the LICENSE file.\\
 When reading recipes in this book, you'll note that (hopefully) all of them
 contain measurements and temperatures in both US and metric units. Most of
 Adam's viewers are in the US, and so those are mostly the measurements he uses.
-In many cases, the measurements that are "canonical" are those US measurements,
+In many cases, the measurements that are ``canonical'' are those US measurements,
 and the metric ones have been calculated from them. This is where things get a
 little fuzzy.\\
 Adam prefers to measure things as little as possible, and generally doesn't like
@@ -48,15 +48,15 @@ I like for a recipe to get me in the ballpark, and then I like to eyeball and
 improvise the rest.
 \end{quote}
 
-... and so to a certain degree the very idea of a recipe with strict
-measurements is antithetical to the "Adam Ragusea Philosophy". This author does
+\ldots and so to a certain degree the very idea of a recipe with strict
+measurements is antithetical to the ``Adam Ragusea Philosophy''. This author does
 not dispute this, but thinks that having measurements as a starting point is not
 only helpful to newbies, but a must for those dieting (though this is not a
 dieting cookbook). However, certain liberties have been taken in some unit
 conversions. For example, the \ref{rec:chicken-pot-pie} recipe calls for
-\unit[1]{lb}/\unit[450]{g} of carrots - but one pound is actually 453.5924
+\unit[1]{lb}/\unit[450]{g} of carrots --- but one pound is actually 453.5924
 grams. This kind of rounding will be omnipresent, with the intention of getting
-readers that use the metric system into the same "ballpark" as those using US
+readers that use the metric system into the same ``ballpark'' as those using US
 measurements. Always remember to mess with a recipe as much as you want; as Adam
 says:
 
@@ -66,7 +66,7 @@ There are no rules.
 
 Finally, reading a recipe off a page can't really possibly impart as much
 information as watching the video on which it's based, which is why every recipe
-comes with a link to the original video, next to the "source" symbol. For the
+comes with a link to the original video, next to the ``source'' symbol. For the
 best experience, it's recommended that you watch the video at least once and
 then consult the written recipes as a short refresher when coming back to them.
 For this reason, recipes generally leave out \emph{why} things are done as
@@ -79,7 +79,7 @@ that's better described by the videos, focusing instead on the raw mechanics.
 	preparationtime={\unit[1]{h}},
 	bakingtime={\unit[20]{min}},
 	bakingtemperature={\protect\bakingtemperature{fanoven=\unit[400]{$^\circ{}$F}/\unit[200]{$^\circ{}$C}}},
-	portion={\portion{6-8}},
+	portion={\portion{6--8}},
 	source={\href{https://youtu.be/IbgpNZfi6Xo}{Chicken Pot Pie}}
 ]
 {Chicken Pot Pie\label{rec:chicken-pot-pie}}
@@ -124,9 +124,9 @@ that's better described by the videos, focusing instead on the raw mechanics.
 				together into a ball, working it as little as possible to
 				accomplish that. Wrap the dough completely and leave in the
 				refrigerator to chill.
-			\item Peel the carrots - if you're the kind of person who doesn't
+			\item Peel the carrots --- if you're the kind of person who doesn't
 				like the skin of a carrot, it doesn't much matter, just a
-				personal choice - and cut off the very tops and tips. Cut the
+				personal choice --- and cut off the very tops and tips. Cut the
 				carrots into even-length pieces.
 			\item Chop the cauliflower florets into somewhat large, bite-sized
 				pieces.
@@ -138,7 +138,7 @@ that's better described by the videos, focusing instead on the raw mechanics.
 				the sauce; in fact, the only reason we set any aside is so you
 				can thicken the sauce later if it's too thin for your taste. It
 				looks like Adam takes out a little more than
-				\unit[$\frac{1}{4}$]{c}/\unit[50]{ml} - but then he adds it all
+				\unit[$\frac{1}{4}$]{c}/\unit[50]{ml} --- but then he adds it all
 				back in later.
 			\item Whisk in about half a bottle of white wine, a little at a
 				time. If you're confused about what size of bottle is implied,
@@ -158,7 +158,7 @@ that's better described by the videos, focusing instead on the raw mechanics.
 			\item When the cauliflower is about half cooked, sprinkle in salt
 				and pepper to taste. The sauce should ultimately taste a little
 				too salty, as it doesn't need to stand on its own.
-			\item Flour a space for rolling out the dough - cutting board or
+			\item Flour a space for rolling out the dough --- cutting board or
 				counter top, whichever you prefer.
 			\item Roll the dough out just a little with a pin, then turn it and
 				roll again. If it happens to tear and form holes, simply rip a
